[package]
name = "pqxdh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
ed25519-compact = { version = "2.0.4" }
pqc_kyber = { version = "0.7.1", features = ["kyber1024"] }
rand = { version = "0.8.5"}
