[package]
name = "pqxdh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
ed25519-compact = { version = "2.0.4" }
hkdf = "0.12.3"
pqc_kyber = { version = "0.7.1", features = ["kyber1024"] }
rand = { version = "0.8.5"}
sha2 = "0.10.8"
