[package]
name = "pqxdh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
pqc_kyber = { version = "0.7.1", features = ["kyber1024"] }
rand = "0.8.5"
sha2 = "0.10.8"
x25519-dalek = "2.0.0"
xeddsa = "1.0.2"
